fix reset spawns command deleting all spawns, resulting in inaccessible island
closes #107